style.css
/* ... */
#nav-links > li > a {
    text-decoration: none;
}

#nav-links-dropout-button {
    position: relative;
    cursor: pointer;
}

#dropout-menu {
    border-radius: 5px;
    padding: 3px 0;
    position: absolute;
    display: none;
    top: 20pt;
    left: 0;
    background-color: #f04d35;
    z-index: 5;
    width: 100%;
}

#dropout-menu > ul {
    list-style-type: none;
    display: flex;
    flex-direction: column;
    gap: .3rem;
    width: 100%;
}

#dropout-menu > ul > li {
    color: #FFF;
    width: 100%;
    padding: 5%;
}

#dropout-menu > ul > li > a {
    color: #FFF;
    text-decoration: none;
}

#dropout-menu > ul > li:hover {
    background-color: #d13018;

}

#contact-tel {
    display: none;
}

#contact-tel > a {
    text-decoration: none;
}

#lang-switcher-outter {
    display: none;
}

#logo-outter > img {
    height: 6dvh;
    mix-blend-mode: screen;
    filter: invert(1);
}

#nav-links-menu-mobile {
    position: relative;
}

#menu-mobile-icon-outter {
    padding: 10px;
}

#menu-mobile-icon {
    font-size: 18pt;
}

#nav-links-menu-mobile-content {
    width: 90dvw;
    padding: 10%;
    position: absolute;
    height: 0px;
    display: none;
    bottom: max(5dvh, calc(18pt + 20px));
    right: 0;
    background-color: #424242;
}

#nav-links-menu-mobile-content > ul {
    list-style: none;
}

#nav-links-menu-mobile-content > ul > li:hover {
    background-color: #333;
}

#nav-links-menu-mobile-content > ul > li > a {
    text-decoration: none;
    width: 100%;
    height: 100%;
    padding: 20px;
    display: inline-block;
}

#company-thumbnail {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5%;
    width: 100%;
    padding: 2%;
}

#thumbnail-body {
    width: 100%;
    background-color: transparent;
    padding: 5%;
    display: flex;
    gap: 30px;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

#company-thumbnail-header > h1 {
    font-size: 28pt;
}

#company-thumbnail-body > p {
    letter-spacing: 0.7pt;
}

#pricelist-button {
    width: 150px;
    height: 50px;
    background-color: transparent;
    border: 2px solid #F00;
    border-radius: 5px;
    transition: .4s;
}

#pricelist-button:hover{
    background-color: #F00;
    transition: .4s;
}

#company-services {
    background-color: #FFF;
}

#services-thumbnail{
    display: flex;
    flex-direction: column;
    padding: 3% 5%;
    padding-bottom: 0;
    gap: 1rem;
}

#services-thumbnail-header-outter {
    font-size: 20pt;
    width: 100%;
}

#services-thumbnail-text-outter {
    color: #424242;
    width: 100%;
}

#services-content{
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;
    justify-content: center;
    column-gap: 5%;
    row-gap: 2rem;
    padding: 3% 5%;
    
}

.service-card {
    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.3);
    border: 1px solid #EEE;
    border-radius: 5px;
    padding: 5%;
}

.service-card-header>img{
    width: 100px;
    height: 100px;
}

.service-card-body > p {
    color: #444;
}

#company-support {
    padding: 5%;
}

#company-support-header{
    font-size: 20pt;
}

#support-services{
    display: grid;
    grid-template-columns: 1fr;
    width: 100%;
    justify-content: center;
    justify-items: center; 
    column-gap: 2%;
    row-gap: .7rem; 
    margin: 0 auto;
    padding-top: 3%;
}

.support-service{
    border-radius: 10px;
    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.3);
    padding-left: 8px;
    padding-top: 8px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: #FFF;
    overflow: hidden;
}

.support-service-num{
    padding-bottom: 5px;
    color:#999;
}

.support-service-header, .support-service-body{
    padding-right: 8px;
}

.support-service-icon>img{
    width: 60px;
    height: 60px;
    
}

.support-service-icon{
    display: flex;
    flex-direction: row-reverse;
    padding-bottom: 0;
}

#company-experience{
    display: flex;
    flex-direction: column-reverse;
    align-items: unset;
    position: relative;
}

#company-experience::after {
    content: "";
    position: absolute;
    bottom: 10%;
    right: 0;
    width: 100%;
    height: 120%;
    background-color: #424242;
    z-index: -1;
}

#exp-image-outter {
    width: 70%;
}

#exp-image-outter>img{
    width: 100%;
}

#exp-content {
    display: flex;
    flex-direction: column;
    padding: 3%;
}

#exp-header-outter{
    font-size: 20pt;
}

#exp-features{
    display: flex;
    flex-direction: column;
    gap: 1rem;
} 

.exp-feature{
    padding: 10px;
    max-width: 70%;
}

.exp-feature::before{
    content: "";
    background-color: red;
    height: 70px;
    width: 3px;
    display: inline-block;
    transform: translateX(-15px);
    position:absolute; 
}

#thumbnail-achievments {
    width: 100%;
    background-color: transparent;
    padding: 5%;
    justify-content: center;
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-content: space-evenly;
    gap: 20px;
}


.thumbnail-achievment {
    padding: 10px;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.thumbnail-achievment::before {
    content: "";
    background-color: red;
    height: 70px;
    width: 3px;
    display: inline-block;
    transform: translateX(-15px);
    position:absolute;
}

.thumbnail-achievment > h3 {
    font-size: 18pt;
}

/* .thumbnail-achievment:nth-child(1) > h3 {
    font-size: 24pt;
    transform: translateY(-4pt);
}

.thumbnail-achievment:nth-child(1) > p {
    transform: translateY(-6pt);
} */

#pricelist {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#pricelist-header-outter > h1 {
    font-size: 28pt;
}

#options-outter {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 2% 10% 2% 10%;
    justify-content: center;
    gap: .2rem;
}
/* ... */

